[package]
name = "dracon"
version = "0.1.0"
edition = "2021"
authors = ["Lingkang <contact@lingkang.dev>"]

[workspace]
members = ["logger", "raft", "server"]

[dev-dependencies]
line_cracker = "0.1.1"

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
log = { version = "0.4.21", features = ["std"] }
logger = { path = "logger" }
raft = { path = "raft" }
tokio = { version = "1.36.0", features = [
    "rt",
    "io-util",
    "net",
    "time",
    "macros",
] }
