[package]
name = "dracon"
version = "0.1.0"
edition = "2021"
authors = ["Lingkang <contact@lingkang.dev>"]

[workspace]
members = ["kv", "logger", "raft", "rpc", "server"]

[[bin]]
name = "server"
path = "server/src/main.rs"

[dependencies]
kv = { path = "kv" }
log = "0.4.21"
logger = { path = "logger" }
raft = { path = "raft" }
rpc = { path = "rpc" }
tokio = { version = "1.36.0", features = [
    "rt",
    "io-util",
    "net",
    "time",
    "macros",
] }

[[example]]
name = "ping"
